[package]
name = "rcloader"
version = "0.1.0"
authors = ["Hamid <hamid@fastforward.ai>"]
edition = "2018"

[dependencies]
json-patch = "*"
reqwest = "0.9.20"
base64 = "0.10.1"
itertools = "0.8.0"
hocon = "0.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]